Semester_1/Einfuehrung_in_die_Programmierung/OLDHOMEWORK/s01e05.txt
a)
s01e05_a.c: In function 'main':                         #Der Fehler befindet sich in der "main" Funktion
s01e05_a.c:5:28: error: expected ';' before 'return'    #Der Fehler bezieht sich auf ein fehlendes Semicolon
    5 |     printf("Hello World\n")                     #In dieser Zeile wurde ein Semicolon nach der ")" vergessen!
      |                            ^                    #Anzeige wo etwas fehlt
      |                            ;                    #Anzeige was fehlt
    6 |     return EXIT_SUCCESS;                        #vor dem unterwellten Wort fehlt etwas!
      |     ~~~~~~                                      #Fehlendes Zeichen wurde eingesetzt und Fehler behoben!



b)
s01e05_b.c: In function 'main':                         #Fehler befindet sich in der Funktion "main"
s01e05_b.c:5:27: error: expected ')' before ';' token   #Es fehlt eine ")" vor dem Semicolon
    5 |     printf("Hello World\n";                     #Zeigt die Zeile an wo sich ein Fehler befindet
      |                           ^                     #Zeigt die Position an wo etwas fehlt
      |                           )                     #Anzeige was fehlt
s01e05_b.c:6:25: error: expected ';' before '}' token   #Folgefehler aufgrund des fehlendes Zeichens
    6 |     return EXIT_SUCCESS;                        #Fehlendes Zeichen wurde eingesetzt und Fehler behoben!
      |                         ^
      |                         ;
    7 | }
      | ~

Notwendige Schritte: Siehe seitliche Doku!

a) Es wurde ein Semicolon vergessen was nachgetragen wurde und alle Fehler wurden behoben.

b) Es wurde eine Klammer-Zu vergessen und das wurde behoben. Code funktioniert nun.